<resources>
    <string name="app_name">StudentCollab</string>

    <!--MessageDialog-->
    <string name="message_dialog_ok">Ok</string>
    <string name="message_dialog_confirm">Yes</string>
    <string name="message_dialog_cancel">Cancel</string>

    <!--Toolbars-->
    <string name="toolbar_next_button_next">Next</string>

    <!-- Login Activity-->
    <string name="login_activity_wrong_credentials">Invalid email address or password</string>
    <string name="login_activity_prompt_email">Email</string>
    <string name="login_activity_prompt_password">Password</string>
    <string name="login_activity_action_login">Log In</string>
    <string name="login_activity_invalid_email">Invalid email address</string>
    <string name="login_activity_invalid_password">Invalid password</string>

    <!-- Sign Up Activity-->
    <string name="sign_up_activity_prompt_password_verification">Repeat your password</string>
    <string name="sign_up_activity_action_sign_up">Sign Up</string>
    <string name="sign_up_activity_password_verification_error">Passwords don\'t match</string>
    <string name="sign_up_activity_email_exists">This email address is already used by an account.</string>
    <string name="sign_up_activity_successful">Successfully created your account.</string>

    <!--Onboarding-->
    <string name="activity_onboarding_description">Start using StudentCollab! \n Please tell us more about yourself:</string>
    <string name="activity_onboarding_first_name_hint">First name</string>
    <string name="activity_onboarding_last_name_hint">Last name</string>
    <string name="activity_onboarding_university_hint">University</string>
    <string name="activity_onboarding_invalid_data">Invalid name</string>
    <string name="activity_onboarding_title">Welcome</string>

    <!-- Feed Activity-->
    <string name="feed_activity_welcome">Welcome</string>
    <string name="feed_navigation_add">Add</string>
    <string name="feed_navigation_home">Home</string>
    <string name="feed_navigation_profile">Profile</string>

    <!-- Settings Fragment -->
    <string name="settings_log_out">Log out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add Activity -->
    <string name="add_title">Create project</string>
    <string name="add_project_title_hint">Title*</string>
    <string name="add_project_description_hint">Description*</string>
    <string name="add_project_no_users_hint">Number of team members*</string>
    <string name="add_project_start_date_hint">Project start date*</string>
    <string name="add_project_end_date_hint">Project end date*</string>
    <string name="add_project_tags_hint">Tags*</string>
    <string name="add_select_start_date">Select project start date</string>
    <string name="add_select_end_date">Select project end date</string>
    <string name="add_end_date_error">The end date can\'t be earlier than the start date or the current date.</string>
    <string name="add_start_date_error">The start date can\'t be earlier than today or later than the end date.</string>
    <string name="add_button_text">Create project</string>
    <string name="add_title_error">The project title field is mandatory and must have at least 3 characters.</string>
    <string name="add_description_error">The project description field is mandatory and must have at least 10 characters.</string>
    <string name="add_no_users_error">The number of team members field is mandatory and must be higher than 1.</string>
    <string name="add_start_date_mandatory">The project start date field is mandatory.</string>
    <string name="add_end_date_mandatory">The project end date field is mandatory.</string>
    <string name="add_tags_error">The project must have at least one tag.</string>
    <string name="add_successful_message">Project created successfully</string>

    <!-- Adapter project -->
    <string name="adapter_project_details">Details</string>
    <string name="adapter_project_start_date">Start date: %1$s</string>
    <string name="adapter_project_end_date">End date: %1$s</string>
    <string name="adapter_project_number_users">%1$d \n out of \n%2$d</string>

    <!-- Fragment Project Details -->
    <string name="fragment_project_description_label">Description:</string>
    <string name="fragment_project_title">Project</string>
    <string name="fragment_project_owner">by %1$s</string>
    <string name="fragment_project_status">Status: %1$s</string>
    <string name="fragment_project_team_label">Team members:</string>
    <string name="fragment_project_team_members_number">%1$d out of %2$d</string>
    <string name="adapter_team_member_pending">Pending request</string>
    <string name="adapter_team_member_owner">Owner</string>
    <string name="fragment_project_details_remove_member_confirmation">Are you sure you want to remove %1$s?</string>
    <string name="fragment_project_details_decline_pending_request_confirmation">Are you sure you want to decline %1$s?</string>
    <string name="fragment_project_details_apply">Apply</string>
    <string name="fragment_project_details_resign">Resign</string>
    <string name="fragment_project_details_resign_confirmation">Are you sure you want to resign from this project?</string>


    <!-- Fragment Profile -->
    <string name="fragment_profile_log_out">Log out</string>
    <string name="fragment_profile_projects_created">Created projects</string>
    <string name="fragment_profile_projects_participated">Joined projects</string>
    <string name="fragment_profile_rating">Rating</string>
    <string name="fragment_profile_logout_confirmation">Are you sure you want to disconnect?</string>
    <string name="fragment_profile_section_title">User profile</string>


    <!-- Activity Write Review -->
    <string name="review_title_new">Write a review</string>
    <string name="review_title_edit">Edit your review</string>
    <string name="review_label">Review %1$s\'s activity in your project called %2$s:</string>
    <string name="review_title">Title*</string>
    <string name="review_review">Review*</string>
    <string name="review_rating_label">Rating:</string>
    <string name="review_button_save">Save review</string>
    <string name="review_title_error">The title field is mandatory and must have at least 3 characters.</string>
    <string name="review_review_error">The review field is mandatory and must have at least 10 characters.</string>
    <string name="review_rating_error">The rating field is mandatory.</string>
    <string name="review_save_successful">Review saved successfully.</string>
    <string name="review_delete">Delete</string>
    <string name="review_delete_confirmation">Are you sure you want to delete your review?</string>

    <!-- Fragment reviews -->
    <string name="fragment_reviews_title">%1$s\'s reviews</string>
    <string name="adapter_review_view_project">View project</string>
    <string name="adapter_review_date">on  %1$s</string>


    <string name="fragment_search_hint">Search tags</string>
    <string name="fragment_search_tags_error">Please select at least one tag.</string>

    <string name="fragment_search_results_section_title">Search results</string>
    <string name="fragment_search_results_no_results">No projects found</string>

</resources>
