<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WriteReviewActivity">

    <include
        android:id="@+id/toolbar_simple"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        layout="@layout/toolbar_simple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:id="@+id/review_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/review_text_view_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/review_label"
                android:textSize="20sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/review_input_layout_title"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_field_margin"
                android:layout_marginTop="20dp"
                android:hint="@string/review_title"
                app:layout_constraintTop_toBottomOf="@+id/review_text_view_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/review_edit_text_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/add_text_height"
                    android:maxLength="50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/review_input_layout_project_review"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_field_margin"
                android:hint="@string/review_review"
                app:layout_constraintTop_toBottomOf="@+id/review_input_layout_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/review_edit_text_layout_project_review"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="@dimen/add_description_height"
                    android:gravity="top"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:maxLength="500"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/review_text_view_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/review_rating_label"
                android:textSize="19sp"
                android:textAlignment="textStart"
                app:layout_constraintTop_toBottomOf="@+id/review_input_layout_project_review"
                app:layout_constraintStart_toStartOf="parent"/>

            <RatingBar
                android:id="@+id/review_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/review_text_view_rating_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <!--android:progressTint="@color/colorPrimary"
            android:secondaryProgressTint="@color/colorPrimaryDark"
            android:indeterminateTint="@color/colorPrimaryDark"-->


            <Button
                android:id="@+id/review_button_save"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/text_light"
                android:text="@string/review_button_save"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tooltip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review_rating_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>