<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddActivity">

    <include
        android:id="@+id/toolbar_simple"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        layout="@layout/toolbar_simple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_input_layout_project_title"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_field_margin"
                android:layout_marginTop="20dp"
                android:hint="@string/add_project_title_hint"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_text_layout_project_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/add_text_height"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_input_layout_project_description"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_field_margin"
                android:hint="@string/add_project_description_hint"
                app:layout_constraintTop_toBottomOf="@+id/add_input_layout_project_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_text_layout_project_description"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/add_description_height"
                    android:gravity="top"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_input_layout_project_no_users"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_field_margin"
                android:hint="@string/add_project_no_users_hint"
                app:layout_constraintTop_toBottomOf="@id/add_input_layout_project_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_text_layout_project_no_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:textSize="@dimen/add_text_height"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_input_layout_project_start_date"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_field_margin"
                android:hint="@string/add_project_start_date_hint"
                app:layout_constraintTop_toBottomOf="@id/add_input_layout_project_no_users"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_text_layout_project_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textSize="@dimen/add_text_height"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_input_layout_project_end_date"
                android:layout_width="@dimen/add_field_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_field_margin"
                android:hint="@string/add_project_end_date_hint"
                app:layout_constraintTop_toBottomOf="@id/add_input_layout_project_start_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_text_layout_project_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textSize="@dimen/add_text_height"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>